<resources>

    <!-- Application Name -->
    <string name="app_name">Animal Rescue</string>

    <!-- Activity Titles -->
    <string name="activity_main_title">Animal Rescue</string>
    <string name="activity_details_title">Details</string>
    <string name="activity_favorites_title">Favorite Animals</string>
    <string name="activity_settings_title">Search Settings</string>

    <!-- Menu Titles -->
    <string name="menu_main_details">Details</string>
    <string name="menu_main_favorites">Favorites Animals</string>
    <string name="menu_main_settings">Search Settings</string>
    <string name="menu_favorites_details">Details</string>
    <string name="menu_details_like">Like</string>
    <string name="menu_details_dislike">Dislike</string>
    <string name="menu_details_share">Share</string>
    <string name="menu_settings_clear">Clear Settings</string>
    <string name="menu_settings_location">Use My Location</string>

    <!--
    Layout Strings
    -->

    <string name="fragment_pet_error">Error.\nTry again.</string>
    <string name="fragment_pet_empty">No favorite pets!</string>

    <string name="fragment_details_name">Name:</string>
    <string name="fragment_details_animal">Animal:</string>
    <string name="fragment_details_gender">Gender:</string>
    <string name="fragment_details_size">Size:</string>
    <string name="fragment_details_age">Age:</string>
    <string name="fragment_details_status">Status:</string>
    <string name="fragment_details_phone">Phone:</string>
    <string name="fragment_details_email">Email:</string>
    <string name="fragment_details_address">Address:</string>
    <string name="fragment_details_description">Description:</string>
    <string name="fragment_details_updated">Last Updated:</string>
    <string name="fragment_details_share_using">Share Using:</string>
    <string name="fragment_details_share_subject">Adopt a Homeless Pet!</string>

    <string name="fragment_settings_animal">Animal:</string>
    <string name="fragment_settings_size">Size:</string>
    <string name="fragment_settings_location">Location:</string>
    <string name="fragment_settings_state">State:</string>
    <string name="fragment_settings_zip">Zip Code:</string>

</resources>
