<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_details_like"
        android:title="@string/menu_details_like"
        android:icon="@drawable/button_heart_empty"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_details_dislike"
        android:title="@string/menu_details_dislike"
        android:icon="@drawable/button_heart"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_details_share"
        android:title="@string/menu_details_share"
        android:icon="@drawable/button_share"
        app:showAsAction="always"/>

</menu>