<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_details_name_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_name"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="Cleo"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_animal_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_animal"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_animal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="Dog"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_gender_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_gender"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_gender_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="F"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_size_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_size"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_size_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="Small"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_age_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_age"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_age_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="Young"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_status_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_status"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="Adopted"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_phone_layout"
            style="@style/DetailFrameHorizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_details_phone"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/fragment_details_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:phoneNumber="true"
                    tools:text="404-421-5787"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/fragment_details_phone_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding_small"
                android:src="@drawable/button_phone"
                android:clickable="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_email_layout"
            style="@style/DetailFrameHorizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_details_email"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/fragment_details_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    tools:text="ambergleam@gmail.com"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/fragment_details_email_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding_small"
                android:src="@drawable/button_email"
                android:clickable="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_address_layout"
            style="@style/DetailFrameHorizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_details_address"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/fragment_details_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    tools:text="845 Spring St. NW #126\nAtlanta, GA 30308"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/fragment_details_address_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding_small"
                android:src="@drawable/button_map"
                android:clickable="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_description_layout"
            style="@style/DetailFrameVertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_description"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                tools:text="A really cute dog with a great attitude!"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_details_updated_layout"
            style="@style/DetailFrameHorizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_details_updated"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_details_updated_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="right"
                tools:text="07/09/1990"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>